--- a/anikaViewFinder/Info.plist
+++ b/anikaViewFinder/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>We need access to your photo library so we can organize your photos!</string>
 	<key>NSCameraUsageDescription</key>
 	<string>We need access to your camera so we can organize your photos!</string>
 	<key>CFBundleDevelopmentRegion</key>
